--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           >
           <ul class="header-nav list">
             <li class="header-item">
-              <a class="header-link link" href="./index.html">Studio</a>
+              <a class="header-link active link" href="./index.html">Studio</a>
             </li>
             <li class="header-item">
               <a class="header-link link" href="./portfolio.html">Portfolio</a>
