--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
           <h2 hidden class="visually-hidden">Features</h2>
           <ul class="features-list list">
             <li class="features-item">
+              <div class="icon-background">
+                <svg class="features-icon" height="64" width="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="section-features-subtitle">Strategy</h3>
               <p class="features-text">
                 Our goal is to identify the business problem to walk away with the perfect and
@@ -78,6 +83,11 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="icon-background">
+                <svg class="features-icon" height="64" width="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="section-features-subtitle">Punctuality</h3>
               <p class="features-text">
                 Bring the key message to the brand's audience for the best price within the shortest
@@ -85,6 +95,11 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="icon-background">
+                <svg class="features-icon" height="64" width="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="section-features-subtitle">Diligence</h3>
               <p class="features-text">
                 Research and confirm brands that present the strongest digital growth opportunities
@@ -92,6 +107,11 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="icon-background">
+                <svg class="features-icon" height="64" width="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="section-features-subtitle">Technologies</h3>
               <p class="features-text">
                 Design practice focused on digital experiences. We bring forth a deep passion for
@@ -149,6 +169,36 @@
               <div class="team-card-content">
                 <h3 class="team-name">Mark Guerrero</h3>
                 <p class="team-name-job">Product Designer</p>
+                <ul class="team-socials-list">
+                  <li class="team-socials-list-item">
+                    <a href="" class="team-social-link">
+                      <svg class="team-social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-list-item">
+                    <a href="" class="team-social-link">
+                      <svg class="team-social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-list-item">
+                    <a href="" class="team-social-link">
+                      <svg class="team-social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-list-item">
+                    <a href="" class="team-social-link">
+                      <svg class="team-social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-item">
@@ -161,6 +211,36 @@
               <div class="team-card-content">
                 <h3 class="team-name">Tom Ford</h3>
                 <p class="team-name-job">Frontend Developer</p>
+                <ul class="team-socials-list">
+                  <li class="team-socials-list-item">
+                    <a href="" class="team-social-link">
+                      <svg class="team-social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-list-item">
+                    <a href="" class="team-social-link">
+                      <svg class="team-social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-list-item">
+                    <a href="" class="team-social-link">
+                      <svg class="team-social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-list-item">
+                    <a href="" class="team-social-link">
+                      <svg class="team-social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-item">
@@ -172,7 +252,37 @@
               />
               <div class="team-card-content">
                 <h3 class="team-name">Camila Garcia</h3>
-                <p class="team-name-job">Marketing</p>
+                <p class="team-name-job">Marketing</p
+                ><ul class="team-socials-list">
+                  <li class="team-socials-list-item">
+                    <a href="" class="team-social-link">
+                      <svg class="team-social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-list-item">
+                    <a href="" class="team-social-link">
+                      <svg class="team-social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-list-item">
+                    <a href="" class="team-social-link">
+                      <svg class="team-social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-list-item">
+                    <a href="" class="team-social-link">
+                      <svg class="team-social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-item">
@@ -184,8 +294,89 @@
               />
               <div class="team-card-content">
                 <h3 class="team-name">Daniel Wilson</h3>
-                <p class="team-name-job">UI Designer</p>
+                <p class="team-name-job">UI Designer</p
+                ><ul class="team-socials-list">
+                  <li class="team-socials-list-item">
+                    <a href="" class="team-social-link">
+                      <svg class="team-social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-list-item">
+                    <a href="" class="team-social-link">
+                      <svg class="team-social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-list-item">
+                    <a href="" class="team-social-link">
+                      <svg class="team-social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-list-item">
+                    <a href="" class="team-social-link">
+                      <svg class="team-social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- Customers section -->
+      <section class="customers-section">
+        <div class="container">
+          <h2 class="customers-title">Customers</h2>
+          <ul class="customers-list">
+            <li class="customers-list-item">
+              <a href="" class="customers-link" aria-label="Logo 1">
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/icons.svg#icon-logo-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-list-item">
+              <a href="" class="customers-link" aria-label="Logo 2">
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/icons.svg#icon-logo-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-list-item" aria-label="Logo 3">
+              <a href="" class="customers-link">
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/icons.svg#icon-logo-3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-list-item" aria-label="Logo 4">
+              <a href="" class="customers-link">
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/icons.svg#icon-logo-4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-list-item" aria-label="Logo 5">
+              <a href="" class="customers-link">
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/icons.svg#icon-logo-5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-list-item" aria-label="Logo 6">
+              <a href="" class="customers-link">
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/icons.svg#icon-logo-6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
