--- a/portfolio.html
+++ b/portfolio.html
@@ -79,12 +79,18 @@
           <ul class="portfolio-examples-list">
             <li class="portfolio-examples-list-item">
               <a class="link" href>
-                <img
-                  src="./images/row_1/img-1.jpg"
-                  alt="Banking App Interface Concept"
-                  width="360"
-                  height="300"
-                />
+                <div class="overlay-wrapper">
+                  <img
+                    src="./images/row_1/img-1.jpg"
+                    alt="Banking App Interface Concept"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay-text"
+                    >14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p
+                  >
+                </div>
                 <div class="card-content">
                   <h2 class="portfolio-subtitle">Banking App Interface Concept</h2>
                   <p class="portfolio-examples-text">App</p>
@@ -93,12 +99,18 @@
             </li>
             <li class="portfolio-examples-list-item">
               <a class="link" href>
-                <img
-                  src="./images/row_1/img-2.jpg"
-                  alt="Cashless Payment with a phone"
-                  width="360"
-                  height="300"
-                />
+                <div class="overlay-wrapper">
+                  <img
+                    src="./images/row_1/img-2.jpg"
+                    alt="Cashless Payment with a phone"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay-text"
+                    >14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p
+                  >
+                </div>
                 <div class="card-content">
                   <h2 class="portfolio-subtitle">Cashless Payment</h2>
                   <p class="portfolio-examples-text">Marketing</p>
@@ -107,12 +119,18 @@
             </li>
             <li class="portfolio-examples-list-item">
               <a class="link" href>
-                <img
-                  src="./images/row_1/img.jpg"
-                  alt="Meditation App on a mobile and a computer"
-                  width="360"
-                  height="300"
-                />
+                <div class="overlay-wrapper">
+                  <img
+                    src="./images/row_1/img.jpg"
+                    alt="Meditation App on a mobile and a computer"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay-text"
+                    >14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p
+                  >
+                </div>
                 <div class="card-content">
                   <h2 class="portfolio-subtitle">Meditation App</h2>
                   <p class="portfolio-examples-text">App</p>
@@ -121,7 +139,13 @@
             </li>
             <li class="portfolio-examples-list-item">
               <a class="link" href>
-                <img src="./images/row_2/img-1.jpg" alt="A taxi" width="360" height="300" />
+                <div class="overlay-wrapper">
+                  <img src="./images/row_2/img-1.jpg" alt="A taxi" width="360" height="300" />
+                  <p class="overlay-text"
+                    >14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p
+                  >
+                </div>
                 <div class="card-content">
                   <h2 class="portfolio-subtitle">Taxi Service</h2>
                   <p class="portfolio-examples-text">Marketing</p>
@@ -130,12 +154,18 @@
             </li>
             <li class="portfolio-examples-list-item">
               <a class="link" href>
-                <img
-                  src="./images/row_2/img-2.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                  height="300"
-                />
+                <div class="overlay-wrapper">
+                  <img
+                    src="./images/row_2/img-2.jpg"
+                    alt="Screen Illustrations"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay-text"
+                    >14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p
+                  >
+                </div>
                 <div class="card-content">
                   <h2 class="portfolio-subtitle">Screen Illustrations</h2>
                   <p class="portfolio-examples-text">Design</p>
@@ -144,12 +174,18 @@
             </li>
             <li class="portfolio-examples-list-item">
               <a class="link" href>
-                <img
-                  src="./images/row_2/img-3.jpg"
-                  alt="Girl having online courses using her mobile"
-                  width="360"
-                  height="300"
-                />
+                <div class="overlay-wrapper">
+                  <img
+                    src="./images/row_2/img-3.jpg"
+                    alt="Girl having online courses using her mobile"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay-text"
+                    >14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p
+                  >
+                </div>
                 <div class="card-content">
                   <h2 class="portfolio-subtitle">Online Courses</h2>
                   <p class="portfolio-examples-text">Marketing</p>
@@ -158,12 +194,18 @@
             </li>
             <li class="portfolio-examples-list-item">
               <a class="link" href>
-                <img
-                  src="./images/row_3/img-01.jpg"
-                  alt="Instagram Stories Concept"
-                  width="360"
-                  height="300"
-                />
+                <div class="overlay-wrapper">
+                  <img
+                    src="./images/row_3/img-01.jpg"
+                    alt="Instagram Stories Concept"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay-text"
+                    >14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p
+                  >
+                </div>
                 <div class="card-content">
                   <h2 class="portfolio-subtitle">Instagram Stories Concept</h2>
                   <p class="portfolio-examples-text">Design</p>
@@ -172,12 +214,18 @@
             </li>
             <li class="portfolio-examples-list-item">
               <a class="link" href>
-                <img
-                  src="./images/row_3/img-02.jpg"
-                  alt="Girl carying a bag with fruit and vegetables"
-                  width="360"
-                  height="300"
-                />
+                <div class="overlay-wrapper">
+                  <img
+                    src="./images/row_3/img-02.jpg"
+                    alt="Girl carying a bag with fruit and vegetables"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay-text"
+                    >14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p
+                  >
+                </div>
                 <div class="card-content">
                   <h2 class="portfolio-subtitle">Organic Food</h2>
                   <p class="portfolio-examples-text">Web Site</p>
@@ -186,12 +234,18 @@
             </li>
             <li class="portfolio-examples-list-item">
               <a class="link" href>
-                <img
-                  src="./images/row_3/img-03.jpg"
-                  alt="Barista making coffee"
-                  width="360"
-                  height="300"
-                />
+                <div class="overlay-wrapper">
+                  <img
+                    src="./images/row_3/img-03.jpg"
+                    alt="Barista making coffee"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay-text"
+                    >14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p
+                  >
+                </div>
                 <div class="card-content">
                   <h2 class="portfolio-subtitle">Fresh Coffee</h2>
                   <p class="portfolio-examples-text">Web Site</p>
@@ -205,14 +259,49 @@
 
     <!-- Footer section -->
     <footer class="footer">
-      <div class="container">
-        <a class="header-logo link" href="./index.html"
-          >Web<span class="footer-logo-light">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with digital marketing & growth
-          solutions.
-        </p>
+      <div class="footer container">
+        <div class="logo-text">
+          <a class="header-logo link" href="./index.html"
+            >Web<span class="footer-logo-light">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with digital marketing &
+            growth solutions.
+          </p>
+        </div>
+        <div class="footer-socials">
+          <h3 class="footer-socials-subtitle">Social media</h3>
+          <ul class="footer-links-list">
+            <li class="footer-links-item">
+              <a href="" class="footer-link">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-links-item">
+              <a href="" class="footer-link">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-links-item">
+              <a href="" class="footer-link">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-links-item">
+              <a href="" class="footer-link">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
