--- a/portfolio.html
+++ b/portfolio.html
@@ -78,7 +78,7 @@
           </ul>
           <ul class="portfolio-examples-list">
             <li class="portfolio-examples-list-item">
-              <a class="link" href>
+              <a class="portfolio-link" href>
                 <div class="overlay-wrapper">
                   <img
                     src="./images/row_1/img-1.jpg"
@@ -98,7 +98,7 @@
               </a>
             </li>
             <li class="portfolio-examples-list-item">
-              <a class="link" href>
+              <a class="portfolio-link" href>
                 <div class="overlay-wrapper">
                   <img
                     src="./images/row_1/img-2.jpg"
@@ -118,7 +118,7 @@
               </a>
             </li>
             <li class="portfolio-examples-list-item">
-              <a class="link" href>
+              <a class="portfolio-link" href>
                 <div class="overlay-wrapper">
                   <img
                     src="./images/row_1/img.jpg"
@@ -138,7 +138,7 @@
               </a>
             </li>
             <li class="portfolio-examples-list-item">
-              <a class="link" href>
+              <a class="portfolio-link" href>
                 <div class="overlay-wrapper">
                   <img src="./images/row_2/img-1.jpg" alt="A taxi" width="360" height="300" />
                   <p class="overlay-text"
@@ -153,7 +153,7 @@
               </a>
             </li>
             <li class="portfolio-examples-list-item">
-              <a class="link" href>
+              <a class="portfolio-link" href>
                 <div class="overlay-wrapper">
                   <img
                     src="./images/row_2/img-2.jpg"
@@ -173,7 +173,7 @@
               </a>
             </li>
             <li class="portfolio-examples-list-item">
-              <a class="link" href>
+              <a class="portfolio-link" href>
                 <div class="overlay-wrapper">
                   <img
                     src="./images/row_2/img-3.jpg"
@@ -193,7 +193,7 @@
               </a>
             </li>
             <li class="portfolio-examples-list-item">
-              <a class="link" href>
+              <a class="portfolio-link" href>
                 <div class="overlay-wrapper">
                   <img
                     src="./images/row_3/img-01.jpg"
@@ -213,7 +213,7 @@
               </a>
             </li>
             <li class="portfolio-examples-list-item">
-              <a class="link" href>
+              <a class="portfolio-link" href>
                 <div class="overlay-wrapper">
                   <img
                     src="./images/row_3/img-02.jpg"
@@ -233,7 +233,7 @@
               </a>
             </li>
             <li class="portfolio-examples-list-item">
-              <a class="link" href>
+              <a class="portfolio-link" href>
                 <div class="overlay-wrapper">
                   <img
                     src="./images/row_3/img-03.jpg"
@@ -270,7 +270,7 @@
           </p>
         </div>
         <div class="footer-socials">
-          <h3 class="footer-socials-subtitle">Social media</h3>
+          <p class="footer-socials-subtitle">Social media</p>
           <ul class="footer-links-list">
             <li class="footer-links-item">
               <a href="" class="footer-link">
