--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
           </p>
         </div>
         <div class="footer-socials">
-          <h3 class="footer-socials-subtitle">Social media</h3>
+          <p class="footer-socials-subtitle">Social media</p>
           <ul class="footer-links-list">
             <li class="footer-links-item">
               <a href="" class="footer-link">
@@ -433,7 +433,7 @@
     <!-- Modal window -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button class="modal-btn" data-modal-close>
+        <button type="button" class="modal-btn" data-modal-close>
           <svg class="modal-icon" width="8" height="8">
             <use href="./images/icons.svg#close-icon"></use>
           </svg>
